--- a/gui/Software-Engineering/src/app/register/register.component.html
+++ b/gui/Software-Engineering/src/app/register/register.component.html
@@ -1,1 +1,9 @@
-
+<div class="register-page">
+    <h2>Registrierung</h2>
+    <form>
+      <input type="text" placeholder="Username" required>
+      <input type="email" placeholder="Email Address" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Register</button>
+    </form>
+  </div>
