--- a/gui/Software-Engineering/src/app/galerie/galerie.component.scss
+++ b/gui/Software-Engineering/src/app/galerie/galerie.component.scss
@@ -1,51 +1,53 @@
-.Galerie{
-    padding-top: 10px;
-    display: flex;
-    height: 93vh;
-    .Left-Galerie{
-        width: 60%;
-        background-color: grey;
+@import 'styles';
 
-        button {
-            padding: 8px 12px;
-            margin: 5px 0;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-          }
-          
-          button:hover {
-            background-color: #0056b3;
-          }
-          
-          ul {
-            list-style: none;
-            padding: 0;
-          }
-          
-          li {
-            margin: 10px 5px;
-            padding: 8px;
-            background-color: #f8f9fa;
-            border-radius: 4px;
-            display: flex;
-            justify-content: space-between;
-          }
-          
-          li button {
-            background-color: #28a745;
-            margin-left: 10px;
-          }
-          
-          li button:hover {
-            background-color: #218838;
-          }
+.Galerie {
+  padding-top: 10px;
+  display: flex;
+  height: 93vh;
+
+  .Left-Galerie {
+    width: 60%;
+    background-color: $grey-dark;
+
+    button {
+      padding: 8px 12px;
+      margin: 5px 0;
+      background-color: $primary;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
-    
-    .Anzeigebereich{
-        width: 40%;
+
+    button:hover {
+      background-color: $primary-hover;
     }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 10px 5px;
+      padding: 8px;
+      background-color: $background;
+      border-radius: 4px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    li button {
+      background-color: $primary;
+      margin-left: 10px;
+    }
+
+    li button:hover {
+      background-color: $primary-hover
+    }
+  }
+
+  .Anzeigebereich {
+    width: 40%;
+  }
 }
-
