--- a/gui/Software-Engineering/src/app/register/register.component.scss
+++ b/gui/Software-Engineering/src/app/register/register.component.scss
@@ -1,42 +1,43 @@
- 
-  /* Rechte Seite der Homepage */
-  .register-page {
-    flex-grow: 1;
-    padding: 20px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    color: black;
+@import 'styles';
 
-        p{
-            margin: 8px;
-        }
+/* Rechte Seite der Homepage */
+.register-page {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: $white;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  color: $black;
 
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            padding-top: 40px;
-          }
-          
-          input {
-            width: 300px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-          }
-          
-          button {
-            background-color: #000;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-          }
+  p {
+    margin: 8px;
   }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding-top: 40px;
+  }
+
+  input {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid $grey;
+    border-radius: 5px;
+  }
+
+  button {
+    background-color: $black;
+    color: $white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+}
