inital login design

--- a/gui/src/app/login/login.component.html
+++ b/gui/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="login-page">
+    <div class="login-container">
+        <h1 class="welcome-header">Login Now</h1>
+        <div class="input-group">
+            <input id="email" class="input" type="email" placeholder="Enter your email">
+        </div>
+        <div class="input-group">
+            <input id="password" class="input" type="password" placeholder="Enter your password">
+        </div>
+        <div class="button-group">
+            <button class="button primary">Login</button>
+            <button class="button primary-alt">Register</button>
+        </div>
+    </div>
+</div>
