changed global styling

--- a/gui/src/styles.scss
+++ b/gui/src/styles.scss
@@ -23,7 +23,7 @@ $success: #28a745;
 $success-hover: #218838;
 $success-text: $text-light;
 
-$error: #dc3545;
+$error: #ff253b;
 $error-hover: #c82333;
 $error-text: $text-light;
 
