--- a/gui/src/app/login/login.component.scss
+++ b/gui/src/app/login/login.component.scss
@@ -13,11 +13,12 @@
 
 .login-container {
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 2rem;
+    padding: 2rem 2rem 1rem 2rem;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     width: 300px;
+
 }
 
 .welcome-header {
@@ -55,4 +56,8 @@
     margin-top: -5px;
     margin-bottom: 2px;
     margin-left: 5px;
+}
+
+.legal-info {
+    margin-top: 10px;
 }
